hphp/hack/test/typecheck/reactive/pure_overridden_class.php.exp
File "pure_overridden_class.php", line 9, characters 19-22:
The method `pure` has the wrong type (Typing[4341])
File "pure_overridden_class.php", line 5, characters 19-22:
This function is pure.
File "pure_overridden_class.php", line 9, characters 19-22:
This function is normal.
